<resources>
    <string name="app_name">SC</string>


    <string name="empty_view_hint">暂无数据，点击刷新</string>
    <string name="error_view_hint">加载失败，点击重试</string>
    <string name="no_network_view_hint">网络异常，点击重试</string>



    <string name="press_again_exit">再按一次退出</string>
    <string name="pull_up_over">已经到底啦～</string>

    <string name="look_more">查看更多</string>

    <string name="tab_home">首页</string>
    <string name="tab_union">联盟</string>
    <string name="tab_find">发现</string>
    <string name="tab_my">我的</string>
    
    
    <string name="btn_save_2_phone">保存到手机</string>
    <string name="btn_share">分享</string>
    <string name="btn_Ok">确定</string>


    <string name="edit_hint_input">请输入</string>
    <string name="edit_hint_select">请选择</string>

    <string name="filter_brand">品牌</string>
    <string name="filter_price">价格</string>
    <string name="filter_sort">排序</string>
    <string name="filter_more">更多</string>


    <string name="home_store">库存管理</string>
    <string name="home_add_car">车辆发布</string>
    <string name="home_customer_manage">客户管理</string>
    <string name="home_subscription_list">订阅列表</string>

    <string name="common_tool">常用工具</string>
    <string name="tool_rate">在线估价</string>
    <string name="tool_quotes">报价大全</string>
    <string name="tool_restricted">限迁查询</string>
    <string name="tool_maintain">维保查询</string>

    <string name="company_market">企业营销</string>
    <string name="company_wechat_shop">企业微店</string>
    <string name="company_poster">营销海报</string>
    <string name="sc_shop">帅车商城</string>

    <string name="union_service">联盟服务</string>
    <string name="union_my">我的联盟</string>
    <string name="union_stock">联盟库存</string>
    <string name="union_bargain">限时特价</string>
    <string name="union_company_recommend">商家推荐</string>
    <string name="union_car_recommend">联盟车辆推荐</string>


    <string name="my_stock">我的车辆</string>
    <string name="my_sub">我的订阅</string>
    <string name="my_collection">我的关注</string>
    <string name="my_comployee_manage">员工管理</string>
    <string name="my_job_manage">职务管理</string>
    <string name="my_feedback">意见反馈</string>
    <string name="my_contack">联系客服</string>
    <string name="my_about">关于帅车</string>

    <string name="com_detail">企业详情</string>
    <string name="com_logo">企业LOGO</string>
    <string name="com_full_name">企业全称</string>
    <string name="com_short_name">企业简称</string>
    <string name="com_zcode">企业二维码</string>
    <string name="com_onwer">企业负责人</string>
    <string name="com_owner_phone">负责人电话</string>
    <string name="com_serve_phone">服务电话</string>
    <string name="com_area">所属地区</string>
    <string name="com_address_detail">详细地址</string>
    <string name="com_introduction">企业简介</string>


    <string name="car_add">添加车辆</string>
    <string name="car_edit">编辑车辆</string>
    <string name="car_pic">车辆图片</string>
    <string name="car_base_info">基本信息(带*为必填项)</string>
    <string name="car_buy_info">收购信息(带*为必填项)</string>
    <string name="car_type">车辆类型</string>
    <string name="car_new">新车</string>
    <string name="car_old">二手车</string>
    <string name="car_brand">品牌车型</string>
    <string name="car_manufacture">出厂日期</string>
    <string name="car_mileage">里程</string>
    <string name="car_color">车身颜色</string>
    <string name="car_in_color">内饰颜色</string>
    <string name="car_key_num">钥匙数量</string>
    <string name="car_location">车所在地</string>
    <string name="car_buy_price">收购价</string>
    <string name="car_invoice_price">发票价</string>
    <string name="car_buyer">收购员</string>
    <string name="car_buy_date">收购日期</string>
    <string name="car_price">价格</string>
    <string name="car_model">车型</string>
    <string name="car_age">车龄</string>
    <string name="car_gearbox">变速箱</string>
    <string name="car_displacement">排量</string>

</resources>
