<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.jude.rollviewpager.RollPagerView
        android:id="@+id/rollPagerView"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_marginTop="@dimen/item_margin"
        app:rollviewpager_play_delay="3000" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/item_margin"
        android:paddingTop="@dimen/item_margin"
        android:paddingBottom="@dimen/activity_horizontal_margin"
        android:orientation="vertical"
        android:background="@android:color/white">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:gravity="center_vertical">
            <include layout="@layout/comm_item_label" />
            <TextView
                style="@style/txt_first_black_bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/txt_margin"
                android:text="@string/common_tool"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/item_margin"
            android:paddingBottom="@dimen/item_margin"
            android:orientation="horizontal">
            <com.byb.sc.utils.TextDrawableCenterView
                style="@style/txt_second_black"
                android:id="@+id/tvToolRate"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:drawableTop="@mipmap/pic_home_price"
                android:drawablePadding="10dp"
                android:text="@string/tool_rate"
                android:background="?attr/selectableItemBackground"/>
            <com.byb.sc.utils.TextDrawableCenterView
                style="@style/txt_second_black"
                android:id="@+id/tvToolQuotes"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:drawableTop="@mipmap/pic_home_evaluate"
                android:drawablePadding="10dp"
                android:text="@string/tool_quotes"
                android:background="?attr/selectableItemBackground"/>

            <com.byb.sc.utils.TextDrawableCenterView
                style="@style/txt_second_black"
                android:id="@+id/tvToolRestricted"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:drawableTop="@mipmap/pic_home_restricted"
                android:drawablePadding="10dp"
                android:text="@string/tool_restricted"
                android:background="?attr/selectableItemBackground"/>

            <com.byb.sc.utils.TextDrawableCenterView
                style="@style/txt_second_black"
                android:id="@+id/tvToolMaintain"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:drawableTop="@mipmap/pic_home_repare"
                android:drawablePadding="10dp"
                android:text="@string/tool_maintain"
                android:background="?attr/selectableItemBackground"/>

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/item_margin"
        android:paddingTop="@dimen/item_margin"
        android:paddingBottom="@dimen/activity_horizontal_margin"
        android:orientation="vertical"
        android:background="@android:color/white">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:gravity="center_vertical">
            <include layout="@layout/comm_item_label" />
            <TextView
                style="@style/txt_first_black_bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/txt_margin"
                android:text="@string/company_market"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/item_margin"
            android:paddingBottom="@dimen/item_margin"
            android:orientation="horizontal">
            <com.byb.sc.utils.TextDrawableCenterView
                style="@style/txt_second_black"
                android:id="@+id/tvCompanyShop"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:drawableTop="@mipmap/pic_home_wechat_store"
                android:drawablePadding="10dp"
                android:text="@string/company_wechat_shop"
                android:background="?attr/selectableItemBackground"/>
            <com.byb.sc.utils.TextDrawableCenterView
                style="@style/txt_second_black"
                android:id="@+id/tvCompanyPoster"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:drawableTop="@mipmap/pic_home_poster"
                android:drawablePadding="10dp"
                android:text="@string/company_poster"
                android:background="?attr/selectableItemBackground"/>
            <ImageView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:src="@mipmap/pic_home_poster"
                android:visibility="invisible"/>
            <ImageView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:src="@mipmap/pic_home_poster"
                android:visibility="invisible"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/item_margin"
        android:paddingTop="@dimen/item_margin"
        android:paddingBottom="@dimen/activity_horizontal_margin"
        android:orientation="vertical"
        android:background="@android:color/white">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:gravity="center_vertical">
            <include layout="@layout/comm_item_label" />
            <TextView
                style="@style/txt_first_black_bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/txt_margin"
                android:text="@string/sc_shop"/>
        </LinearLayout>
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/item_margin"
            android:scaleType="centerCrop"
            android:src="@mipmap/banner_2"/>
    </LinearLayout>
</LinearLayout>