<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <include layout="@layout/toolbar"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/white"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/item_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin">

                <TextView
                    style="@style/txt_detail_item"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/car_pic"/>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:orientation="vertical">
                    <ImageView
                        android:id="@+id/ivCarPic"
                        android:layout_width="120dp"
                        android:layout_height="80dp"
                        android:src="@mipmap/pic_add_128"/>

                    <TextView
                        style="@style/txt_second_gray"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:text="(共0张)" />
                </LinearLayout>
            </RelativeLayout>

            <TextView
                style="@style/txt_second_gray"
                android:layout_width="match_parent"
                android:layout_height="@dimen/detail_item_height"
                android:layout_marginTop="@dimen/item_margin"
                android:background="@color/divide_gray"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:gravity="center_vertical"
                android:text="@string/car_base_info"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/detail_item_height"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin">
                <TextView
                    style="@style/txt_detail_item"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/car_type"/>
                <RadioGroup
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:orientation="horizontal">
                    <RadioButton
                        android:id="@+id/rbCarOld"
                        style="@style/txt_detail_context"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:checked="true"
                        android:text="@string/car_old" />
                    <RadioButton
                        android:id="@+id/rbCarNew"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/txt_detail_context"
                        android:gravity="center"
                        android:layout_marginLeft="@dimen/activity_horizontal_margin"
                        android:layout_marginRight="@dimen/activity_horizontal_margin"
                        android:text="@string/car_new" />
                </RadioGroup>
            </RelativeLayout>
            <include layout="@layout/comm_divide_line_margin_left" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/detail_item_height"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin">
                <TextView
                    style="@style/txt_detail_item"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:drawableRight="@mipmap/ic_must_input"
                    android:text="@string/car_brand"/>
                <TextView
                    style="@style/txt_detail_context"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:layout_marginLeft="@dimen/car_edit_margin_left"
                    android:layout_marginRight="@dimen/car_edit_margin_right"
                    android:hint="@string/edit_hint_select"/>
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:src="@mipmap/ic_right"/>
            </RelativeLayout>
            <include layout="@layout/comm_divide_line_margin_left" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/detail_item_height"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin">
                <TextView
                    style="@style/txt_detail_item"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/car_manufacture"/>
                <TextView
                    style="@style/txt_detail_context"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:layout_marginLeft="@dimen/car_edit_margin_left"
                    android:layout_marginRight="@dimen/car_edit_margin_right"
                    android:hint="@string/edit_hint_select"/>
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:src="@mipmap/ic_right"/>
            </RelativeLayout>
            <include layout="@layout/comm_divide_line_margin_left" />
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/detail_item_height"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin">
                <TextView
                    style="@style/txt_detail_item"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:drawableRight="@mipmap/ic_must_input"
                    android:text="@string/car_mileage"/>
                <TextView
                    style="@style/txt_detail_context"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:layout_marginLeft="@dimen/car_edit_margin_left"
                    android:layout_marginRight="@dimen/car_edit_margin_right"
                    android:hint="@string/edit_hint_input"/>
                <TextView
                    style="@style/txt_detail_item"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:text="万公里"/>
            </RelativeLayout>
            <include layout="@layout/comm_divide_line_margin_left" />
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/detail_item_height"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin">
                <TextView
                    style="@style/txt_detail_item"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:drawableRight="@mipmap/ic_must_input"
                    android:text="@string/car_color"/>
                <TextView
                    style="@style/txt_detail_context"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:layout_marginLeft="@dimen/car_edit_margin_left"
                    android:layout_marginRight="@dimen/car_edit_margin_right"
                    android:hint="@string/edit_hint_select"/>
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:src="@mipmap/ic_right"/>
            </RelativeLayout>
            <include layout="@layout/comm_divide_line_margin_left" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/detail_item_height"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin">
                <TextView
                    style="@style/txt_detail_item"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/car_key_num"/>
                <TextView
                    style="@style/txt_detail_context"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:layout_marginLeft="@dimen/car_edit_margin_left"
                    android:layout_marginRight="@dimen/car_edit_margin_right"
                    android:hint="@string/edit_hint_input"/>
                <TextView
                    style="@style/txt_detail_item"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:text="把"/>
            </RelativeLayout>
            <include layout="@layout/comm_divide_line_margin_left" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/detail_item_height"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin">
                <TextView
                    style="@style/txt_detail_item"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/car_location"/>
                <TextView
                    style="@style/txt_detail_context"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:layout_marginLeft="@dimen/car_edit_margin_left"
                    android:layout_marginRight="@dimen/car_edit_margin_right"
                    android:hint="@string/edit_hint_select"/>
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:src="@mipmap/ic_right"/>
            </RelativeLayout>
            <include layout="@layout/comm_divide_line_margin_left" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>