<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp">
        <RelativeLayout
            android:id="@+id/llFilterBrand"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="?attr/selectableItemBackground">

            <TextView
                style="@style/txt_second_black"
                android:id="@+id/tvSelectBrand"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/filter_brand"
                />
            <ImageView
                android:id="@+id/ivSelectBrand"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@id/tvSelectBrand"
                android:layout_marginLeft="5dp"
                android:background="@mipmap/ic_down"/>
        </RelativeLayout>

        <View
            android:layout_width="1dp"
            android:layout_height="15dp"
            android:layout_gravity="center"
            android:background="@color/divide_gray"/>

        <RelativeLayout
            android:id="@+id/llFilterPrice"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="?attr/selectableItemBackground">
            <TextView
                style="@style/txt_second_black"
                android:id="@+id/tvSelectPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/filter_price"
                />
            <ImageView
                android:id="@+id/ivSelectPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@id/tvSelectPrice"
                android:layout_marginLeft="5dp"
                android:background="@mipmap/ic_down"/>
        </RelativeLayout>
        <View
            android:layout_width="1dp"
            android:layout_height="15dp"
            android:layout_gravity="center"
            android:background="@color/divide_gray"/>
        <RelativeLayout
            android:id="@+id/llFilterSort"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="?attr/selectableItemBackground">
            <TextView
                style="@style/txt_second_black"
                android:id="@+id/tvSelectSort"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/filter_sort" />
            <ImageView
                android:id="@+id/ivSelectSort"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@id/tvSelectSort"
                android:layout_marginLeft="5dp"
                android:background="@mipmap/ic_down"/>
        </RelativeLayout>

        <View
            android:layout_width="1dp"
            android:layout_height="15dp"
            android:layout_gravity="center"
            android:background="@color/divide_gray"/>
        <RelativeLayout
            android:id="@+id/llFilterMore"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="?attr/selectableItemBackground">
            <TextView
                style="@style/txt_second_black"
                android:id="@+id/tvSelectMore"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/filter_more" />
            <ImageView
                android:id="@+id/ivSelectMore"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@id/tvSelectMore"
                android:layout_marginLeft="5dp"
                android:background="@mipmap/ic_down"/>
        </RelativeLayout>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/divide_gray"/>
</LinearLayout>